--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,54 @@
-apply plugin: "java"
-apply plugin: "eclipse"
+def distDir = "dist"
 
-version = "0.1.0"
+defaultTasks = ["clean", "test", "jar", "dist"]
 
-defaultTasks = ["clean", "test", "jar"]
+subprojects {
+    apply plugin: "java"
+    apply plugin: "eclipse"
+    sourceCompatibility = 1.7
+    targetCompatibility = 1.7
+    version = "0.1.0"
+    defaultTasks = ["clean", "test", "jar"]
+    repositories {
+        mavenCentral()
+    }
 
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
+    dependencies {
+        testCompile "junit:junit:4.8.2"
+    }
 
-repositories {
-    mavenCentral()
+    jar {
+        dependsOn configurations.runtime
+        from { configurations.runtime.collect { it.isDirectory() ? it : zipTree(it) } }
+        from sourceSets.main.allJava
+    }
 }
 
-dependencies {
-   testCompile "junit:junit:4.8.2"
+project(":jsrt-cli") {
+    dependencies {
+        compile project(":jsrt-api")
+    }
 }
+
+project(":jsrt-examples") {
+    dependencies {
+        compile project(":jsrt-api")
+    }
+}
+
+task clean << {
+    delete distDir
+}
+
+task dist << {
+    def d = mkdir(distDir)
+    subprojects.each { subproject ->
+        subproject.tasks.jar.each { archiveTask ->
+            copy {
+                from archiveTask.archivePath
+                into d
+            }
+        }
+    }
+}
+
