Added a little bit of event handling

--- a/jsrt-gui/src/main/resources/jsrt.properties
+++ b/jsrt-gui/src/main/resources/jsrt.properties
@@ -4,6 +4,7 @@ title=JSRT %s
 
 label.subtitle=Subtitle File
 label.createdby=Created by Fredy Wijaya
+label.status=Status:
 
 button.open=Open
 button.insert=Insert
@@ -16,3 +17,5 @@ tablecolumn.number=Number
 tablecolumn.starttime=Start Time
 tablecolumn.endtime=End Time
 tablecolumn.text=Text
+
+filechooserext.filter=SRT Files (*.srt)
