--- a/jsrt-gui/src/main/resources/jsrt.properties
+++ b/jsrt-gui/src/main/resources/jsrt.properties
@@ -2,11 +2,11 @@ version=0.0.1
 
 title=JSRT %s
 
-label.subtitle=Subtitle File
+label.subtitle=Subtitle File: 
 label.createdby=Created by Fredy Wijaya
-label.status=Status:
 
 button.open=Open
+button.edit=Edit
 button.insert=Insert
 button.remove=Remove
 button.moveup=Move Up
@@ -17,5 +17,7 @@ tablecolumn.number=Number
 tablecolumn.starttime=Start Time
 tablecolumn.endtime=End Time
 tablecolumn.text=Text
+
+dialog.error.title=Error
 
 filechooserext.filter=SRT Files (*.srt)
