Implemented bunch of GUI stuff

--- a/jsrt-gui/src/main/resources/jsrt.properties
+++ b/jsrt-gui/src/main/resources/jsrt.properties
@@ -4,6 +4,14 @@ title=JSRT %s
 
 label.subtitle=Subtitle File: 
 label.createdby=Created by Fredy Wijaya
+label.number=Number
+label.starttime=Start Time
+label.endtime=End Time
+label.text=Text
+label.hour=Hour
+label.minute=Minute
+label.second=Second
+label.millisecond=Millisecond
 
 button.open=Open
 button.edit=Edit
@@ -12,6 +20,7 @@ button.remove=Remove
 button.moveup=Move Up
 button.movedown=Move Down
 button.checkforupdate=Check for Update
+button.update=Update
 
 tablecolumn.number=Number
 tablecolumn.starttime=Start Time
@@ -19,5 +28,7 @@ tablecolumn.endtime=End Time
 tablecolumn.text=Text
 
 dialog.error.title=Error
+
+dialog.edit.title=Edit
 
 filechooserext.filter=SRT Files (*.srt)
