--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ subprojects {
 project(":jsrt-gui") {
     dependencies {
         compile project(":jsrt-api")
+        compile "org.jfxtras:jfxtras-labs:2.2-r4"
         compile fileTree(dir: "lib", include: "*.jar")
     }
 
