Completed Insert GUI

--- a/jsrt-gui/src/main/resources/jsrt.properties
+++ b/jsrt-gui/src/main/resources/jsrt.properties
@@ -28,7 +28,7 @@ tablecolumn.endtime=End Time
 tablecolumn.text=Text
 
 dialog.error.title=Error
-
+dialog.insert.title=Insert
 dialog.edit.title=Edit
 
 filechooserext.filter=SRT Files (*.srt)
