--- a/jsrt-gui/src/main/resources/jsrt.properties
+++ b/jsrt-gui/src/main/resources/jsrt.properties
@@ -27,8 +27,11 @@ tablecolumn.starttime=Start Time
 tablecolumn.endtime=End Time
 tablecolumn.text=Text
 
+dialog.checkforupdate.title=Check for Update
 dialog.error.title=Error
 dialog.insert.title=Insert
 dialog.edit.title=Edit
 
+dialog.latestversion.message=You already have the latest version (%s)
+dialog.newversion.message=A new version (%s) is available at https://raw.github.com/fredyw/jsrt/master
 filechooserext.filter=SRT Files (*.srt)
