Completed update all times GUI Fixed a GUI bug in the remove subtitle

--- a/jsrt-gui/src/main/resources/jsrt.properties
+++ b/jsrt-gui/src/main/resources/jsrt.properties
@@ -12,6 +12,7 @@ label.hour=Hour
 label.minute=Minute
 label.second=Second
 label.millisecond=Millisecond
+label.updatealltimes=Update All Times:
 
 button.open=Open
 button.edit=Edit
@@ -21,6 +22,7 @@ button.moveup=Move Up
 button.movedown=Move Down
 button.checkforupdate=Check for Update
 button.update=Update
+button.updateall=Update All
 
 tablecolumn.number=Number
 tablecolumn.starttime=Start Time
