Fixed build.gradle for the version bug

--- a/build.gradle
+++ b/build.gradle
@@ -4,18 +4,6 @@ defaultTasks = ["clean", "test", "jar", "dist"]
 
 def javafxLib = "jfxrt.jar"
 
-def getVersion() {
-    def versionPrefix = "version="
-    def version = ""
-    new File("jsrt-gui/src/main/resources/jsrt.properties").eachLine {
-        if (!it.startsWith(versionPrefix)) return
-        version = it.substring(versionPrefix.size())
-    }
-    return version
-}
-
-version = getVersion()
-
 def getJavaFXPath(def javafxLib) {
     def javaHome = System.env["JAVA_HOME"]
     if (javaHome == null) {
@@ -30,7 +18,17 @@ subprojects {
     apply plugin: "eclipse"
     sourceCompatibility = 1.7
     targetCompatibility = 1.7
-    version = "0.1.0"
+    
+    // all the stuff below should be in a seperate function, but Groovy doesn't
+    // allow calling a function within a clsoure
+    def versionPrefix = "version="
+    def ver = ""
+    new File(rootDir, "jsrt-gui/src/main/resources/jsrt.properties").eachLine {
+        if (!it.startsWith(versionPrefix)) return
+        ver = it.substring(versionPrefix.size())
+    }
+    version = ver
+    
     repositories {
         mavenCentral()
     }
