Removed binary files from the repo

--- a/jsrt-gui/src/main/resources/jsrt.properties
+++ b/jsrt-gui/src/main/resources/jsrt.properties
@@ -35,5 +35,5 @@ dialog.insert.title=Insert
 dialog.edit.title=Edit
 
 dialog.latestversion.message=You already have the latest version (%s)
-dialog.newversion.message=A new version (%s) is available at https://raw.github.com/fredyw/jsrt/master
+dialog.newversion.message=A new version (%s) is available at https://github.com/fredyw/jsrt
 filechooserext.filter=SRT Files (*.srt)
